@@ -30,7 +30,7 @@
 static  char sccsid[] = "@(#)s_user.c	2.68 07 Nov 1993 (C) 1988 University of Oulu, \
 Computing Center and Jarkko Oikarinen";
 
-static char *rcs_version="$Id: s_user.c,v 1.56 1999/02/15 03:05:20 db Exp $";
+static char *rcs_version="$Id: s_user.c,v 1.57 1999/02/16 06:04:44 db Exp $";
 
 #endif
 
@@ -1931,6 +1931,13 @@ static	int	m_message(aClient *cptr,
 
   /*  nick = strtoken(&p, parv[1], ",");*/
   nick = parv[1];
+  p = strchr(nick,',');
+  if(p)
+    {
+      sendto_one(sptr, err_str(ERR_TOOMANYTARGETS),
+		     me.name, parv[0], cmd);
+      return -1;
+    }
 
 #ifdef EXTRA_BOT_NOTICES
   if (MyConnect(sptr)) /* don't check for remote bots */
